chore(packages): remove tsconfig.eslint.json from tsconfig.json references

--- a/packages/sdk-vue/tsconfig.eslint.json
+++ b/packages/sdk-vue/tsconfig.eslint.json
@@ -1,7 +1,7 @@
 {
   "extends": "tsconfig/esnext-dom.json",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
